# RAPTOR

./: 1.py  pyb_test.py  test.md
.devcontainer/: devcontainer.json
Examples/: CMakeLists.txt
Examples/Kinova/CollisionAvoidanceInverseKinematics/src/: KinovaIKMotionPybindWrapper.cpp
Examples/Kinova/InverseKinematics/: README.md
Examples/Kinova/InverseKinematics/src/: KinovaIKMotionPybindWrapper.cpp
Examples/Talos/: CMakeLists.txt  TalosSingleStep.cpp  TalosSingleStepFixedPosition.cpp  note.md  singlestep_optimization_settings.yaml
Examples/Talos/include/: TalosConstants.h  TalosDynamicsConstraints.h
Examples/Talos/python/: simulation_nocontroller.py  talos_simulation.py  visualize_nocontroller.py  visualize_trajectory.py
Examples/Talos/src/: TalosCustomizedConstraints.cpp
Examples/Unitree/: CMakeLists.txt  H1SingleStep.cpp  singlestep_optimization_settings.yaml
Examples/Unitree/include/: H1ConstrainedInverseDynamics.h  H1Constraints.h  H1CustomizedConstraints.h  H1DynamicsConstraints.h  H1MultipleStepOptimizer.h  H1MultipleStepPeriodicityConstraints.h  H1SingleStepOptimizer.h  H1SingleStepPeriodicityConstraints.h
Examples/Unitree/src/: H1ConstrainedInverseDynamics.cpp  H1CustomizedConstraints.cpp  H1DynamicsConstraints.cpp  H1MultipleStepOptimizer.cpp  H1MultipleStepPeriodicityConstraints.cpp  H1SingleStepOptimizer.cpp  H1SingleStepPeriodicityConstraints.cpp
Robots/Unitree/: h1_2_12dof_floatingbase.urdf
Robots/talos/: talos_reduced_armfixed.urdf  talos_reduced_armfixed_floatingbase.urdf
docker/: Dockerfile
